--- a/res/style.css
+++ b/res/style.css
@@ -1,10 +1,15 @@
+@font-face {
+    font-family: Arcade;
+    src: url('/font/arcade.ttf');
+}
+
 #mainPane {
-	-fx-font-family:'Arcade Interlaced';
     -fx-background-color: purple;
     -fx-font-size: 15.0pt;
     
 }
 #menu-buttons {
+	-fx-font-family:'Arcade Interlaced';
     -fx-background-color: black;
     -fx-text-fill: white;
 }
