--- a/res/style.css
+++ b/res/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: Arcade;
-    src:url('arcade.ttf');
+    src:url('/font/arcade.ttf');
 }
 
 #mainPane {
-	-fx-background-image: url("tunnel_1.gif");
+	-fx-background-image:url("/images/menu/tunnel_1.gif");
 	-fx-background-size: cover;
     -fx-font-size: 15.0pt;
     
