--- a/res/style.css
+++ b/res/style.css
@@ -42,17 +42,12 @@
 	-fx-font-size: 10.0pt;
 
 }
-#game-box{
+#gameScreen {
     -fx-background-color: black;
-    -fx-border-radius: 30;
-    -fx-border-width: 2;
-}
-#game-box-bg {
-    -fx-background-color: black;
-    -fx-background-size: cover;
     -fx-border-radius: 0 0 25 0;
     -fx-background-radius: 0 0 25 0;
 }
+
 #score-list{
 	-fx-font-family:'Arcade Interlaced';
 	-fx-text-fill: white !important;
