Final fix for the MainMenu , now works :)
lot of fix inside the package view, updated the documentation for all classes inside the package view,added custom style.css , deleted unused classes,refactoring the existing classes

--- a/res/style.css
+++ b/res/style.css
@@ -53,5 +53,10 @@
 	-fx-text-fill: white !important;
 	-fx-font-size: 13.0pt;
 }
+#message-text{
+	-fx-font-family:'Arcade Interlaced';
+	-fx-text-fill: red !important;
+	-fx-font-size: 10.0pt;
 
+}
 
