fixed gamescreen and game over window
add new css rules for in game help panel

--- a/res/style.css
+++ b/res/style.css
@@ -9,6 +9,12 @@
     -fx-font-size: 15.0pt;
     
 }
+#helpPane {
+	-fx-background-color: black;
+	-fx-background-size: cover;
+    -fx-font-size: 15.0pt;
+    
+}
 #menu-buttons {
 	-fx-font-family:'Arcade Interlaced';
     -fx-background-color: white;
