fixed game over screen , implemented in-game status bar

--- a/res/style.css
+++ b/res/style.css
@@ -69,4 +69,9 @@
 	-fx-fill: white !important;
 	-fx-font-size: 25.0pt;
 }
+#status-bar{
+	-fx-font-family:'Arcade Interlaced';
+	-fx-text-fill: white !important;
+	-fx-font-size: 10.0pt;
+}
 
